docker build fix

--- a/.nginx/default.conf
+++ b/.nginx/default.conf
@@ -6,6 +6,6 @@ server {
     include /etc/nginx/mime.types;
 
     location /sales-dashboard/ {
-        try_files $uri $uri/ =404;
+        try_files $uri /sales-dashboard/index.html;
     }
 }
