--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,10 @@
-version: '3'
+version: "3"
 services:
   lms:
     image: 665804139994.dkr.ecr.us-west-2.amazonaws.com/prestaapps/lms:latest
     container_name: lms
     ports:
-      - '4173:80'
+      - "4173:80"
     networks:
       - keycloak_presta-network
 networks:
