--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
+VITE_API_BASE_URL=https://staging-lending.presta.co.ke/scoring/api/v1
 VITE_KOPESHA_API_URL=http://kopesha.presta.co.ke/kopesha
 VITE_APP_ROOT_AUTH=https://staging-accounts.presta.co.ke
