--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build --base=/sales-dashboard/",
+    "clean": "rm -rf node_modules",
+    "reinstall": "npm run clean && npm install",
     "preview": "vite preview",
     "lint": "eslint . --fix --ignore-path .gitignore",
     "format": "prettier .  --write"
