--- a/.nginx/default.conf
+++ b/.nginx/default.conf
@@ -5,7 +5,7 @@ server {
     root  /usr/share/nginx/html;
     include /etc/nginx/mime.types;
 
-    location /sales-dashboard/ {
-        try_files $uri /sales-dashboard/index.html;
+    location /lms/ {
+        try_files $uri /lms/index.html;
     }
 }
