--- a/.env.staging
+++ b/.env.staging
@@ -1,3 +1,4 @@
 VITE_API_BASE_URL=https://staging-lending.presta.co.ke/scoring/api/v1
-VITE_KOPESHA_API_URL=http://kopesha.presta.co.ke/kopesha
-VITE_APP_ROOT_AUTH=https://staging-accounts.presta.co.ke
+VITE_KOPESHA_API_URL=https://staging-lending.presta.co.ke/kopesha
+VITE_APP_USER=https://staging-accounts.presta.co.ke/authentication
+VITE_APP_ROOT=https://staging-accounts.presta.co.ke
