--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "sourceMap": false,
     "resolveJsonModule": true,
     "esModuleInterop": true,
-    "lib": ["esnext", "dom"],
+    "lib": ["es5", "es6", "esnext", "dom", "dom.iterable"],
     "types": ["node", "vuetify"],
     "paths": {
       "@/*": ["src/*"]
