--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "reinstall": "npm run clean && npm install",
     "preview": "vite preview  --host 0.0.0.0",
     "lint": "eslint . --fix --ignore-path .gitignore",
-    "format": "prettier .  --write"
+    "format": "prettier .  --write \"src\""
   },
   "dependencies": {
     "@vueuse/core": "^10.1.0",
