--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
-VITE_API_BASE_URL=https://lending.presta.co.ke/scoring/api/v1
+VITE_MOBILE_API_BASE_URL=https://lending.presta.co.ke/scoring/api/v1
+VITE_BANK_API_BASE_URL=https://lending.presta.co.ke/bank_scoring/api/v1
 VITE_KOPESHA_API_URL=https://lending.presta.co.ke/kopesha
 VITE_APP_USER=https://accounts.presta.co.ke/authentication
 VITE_APP_ROOT=https://accounts.presta.co.ke
