global error interceptors

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,10 @@
     "types": ["node", "vuetify"],
     "paths": {
       "@/*": ["src/*"]
-    }
+    },
+    "typeRoots": [
+      "node_modules/@types"
+    ]
   },
   "include": [
     "src/**/*.ts",
