--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "vue-chartjs": "^5.2.0",
     "vue-router": "^4.0.0",
     "vuetify": "^3.2.1",
-    "webfontloader": "^1.0.0"
+    "webfontloader": "^1.0.0",
+    "nprogress": "^0.2.0"
   },
   "devDependencies": {
     "@mdi/font": "7.0.96",
@@ -33,6 +34,7 @@
     "@types/webfontloader": "^1.6.35",
     "@vitejs/plugin-vue": "^3.0.3",
     "@vue/eslint-config-typescript": "^11.0.0",
+    "@types/nprogress": "^0.2.0",
     "eslint": "^8.22.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-vue": "^9.3.0",
