--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -59,5 +59,5 @@ jobs:
       - name: Helm update/install
         env:
           IMAGE_TAG: ${{ steps.buildtag.outputs.TAG_NAME }}
-        run: cd charts && helm upgrade --install  --set scoringui.imageTag=$IMAGE_TAG --dependency-update --dry-run  -n prod scoring-ui ./
+        run: cd charts && helm upgrade --install  --set scoringui.imageTag=$IMAGE_TAG --dependency-update  -n prod scoring-ui ./
 
