Change GitHub job to run on push in main branch

--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -3,7 +3,7 @@ run-name: LMS automatic deployment
 on:
   push:
     branches:
-      - cd-project
+      - main
 jobs:
   deploy:
     runs-on: ubuntu-22.04
