Change branch name in GitHub job to master

--- a/.github/workflows/build_and_deploy.yaml
+++ b/.github/workflows/build_and_deploy.yaml
@@ -3,7 +3,7 @@ run-name: LMS automatic deployment
 on:
   push:
     branches:
-      - main
+      - master
 jobs:
   deploy:
     runs-on: ubuntu-22.04
