--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
+    "file-saver": "^2.0.5",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@mdi/font": "7.0.96",
+    "@types/file-saver": "^2.0.5",
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/webfontloader": "^1.6.35",
