--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "chart.js": "^4.3.0",
     "core-js": "^3.8.3",
     "file-saver": "^2.0.5",
+    "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.23",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@mdi/font": "7.0.96",
     "@types/file-saver": "^2.0.5",
+    "@types/lodash": "^4.14.197",
     "@types/node": "^18.11.9",
     "@types/nprogress": "^0.2.0",
     "@types/webfontloader": "^1.6.35",
