--- a/.env.staging
+++ b/.env.staging
@@ -2,5 +2,5 @@ VITE_MOBILE_API_BASE_URL=https://staging-lending.presta.co.ke/scoring/api/v1
 VITE_BANK_API_BASE_URL=https://staging-lending.presta.co.ke/bank_scoring/api/v1
 VITE_KOPESHA_API_URL=https://staging-lending.presta.co.ke/kopesha
 VITE_APP_USER=https://staging-accounts.presta.co.ke/authentication
-VITE_CURRENT_USER=https://staging-accounts.presta.co.ke/currentuser
+VITE_CURRENT_USER=https://staging-accounts.presta.co.ke/kopesha/api/auth2/currentuser
 VITE_APP_ROOT=https://staging-accounts.presta.co.ke
